<resources>
    <string name="app_name">MrBeast Anime</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="play">Phát</string>
    <string name="info">Chi tiết</string>
    <string name="see_more">Xem thêm</string>
    <string name="anime_tv_series">Anime bộ</string>
    <string name="anime_movie">Anime lẻ</string>
    <string name="upcoming">Sắp chiếu</string>
    <string name="genres">Thể loại</string>
    <string name="popular_episode">Anime bộ nổi bật</string>
    <string name="popular_promo">Phổ biến</string>
    <string name="synopsis">Tóm tắt</string>
    <string name="seasons">Mùa</string>
    <string name="review">Đánh giá</string>
    <string name="episode">Tập phim</string>
    <string name="episode_with_value">Tập %s</string>
    <string name="aired_at">Phát sóng: %s</string>
    <string name="empty_episodes">Chưa có tập phim nào</string>
    <string name="empty_broadcast">Chưa có phát sóng nào</string>
    <string name="empty_characters">Chưa có nhân vật nào</string>
    <string name="empty_pictures">Chưa có ảnh nào</string>
    <string name="empty_review">Chưa có đánh giá nào</string>
    <string name="broadcast">Phát sóng</string>
    <string name="anime_type">Loại Anime</string>
    <string name="type">Thể loại</string>
    <string name="status">Trạng thái</string>
    <string name="number_of_episodes">Số tập</string>
    <string name="duration">Thời lượng</string>
    <string name="suitable_for">Phù hợp</string>
    <string name="producers">Nhà sản xuất</string>
    <string name="studios">Studio</string>
    <string name="favorites">Lượt yêu thích</string>
    <string name="character">Nhân vật</string>
    <string name="picture">Hình ảnh</string>
    <string name="trailer">Trailer</string>
    <string name="gallery">Bộ sưu tập ảnh</string>
    <string name="empty_data">Chưa có dữ liệu</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="text_default">Mặc định</string>
    <string name="airing">Đang chiếu</string>
    <string name="completed">Đã hoàn thành</string>
    <string name="all_ages">Mọi lứa tuổi</string>
    <string name="children">Trẻ em</string>
    <string name="teens_13_or_older">13 tuổi trở lên</string>
    <string name="violence_profanity">Bạo lực - tục tĩu</string>
    <string name="mild_nudity">Khoả thân nhẹ</string>
    <string name="hentai">Biến thái</string>
    <string name="by_id">Theo ID</string>
    <string name="title">Tiêu đề</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="score">Điểm đánh giá</string>
    <string name="score_by">Điểm đánh giá bởi</string>
    <string name="rank">Xếp hạng</string>
    <string name="popularity">Độ phổ biến</string>
    <string name="members_follow">Lượt theo dõi</string>
    <string name="asc">Tăng dần</string>
    <string name="desc">Giảm dần</string>
    <string name="teen">Độ tuổi</string>
    <string name="order_by">Xếp theo</string>
    <string name="sort">Sắp xếp</string>
    <string name="reset">Đặt lại</string>
    <string name="recommend">Gợi ý</string>
    <string name="score_in_10">%s/10</string>
    <string name="watching">Đang xem</string>
    <string name="watched">Đã xem</string>
    <string name="on_hold_watch">Tạm dừng xem</string>
    <string name="dropped_watch">Đã bỏ xem</string>
    <string name="plan_to_watch">Có kế hoạch xem</string>
    <string name="statistic">Thống kê</string>
    <string name="chart_watch_status">Biểu đồ trạng thái xem</string>
    <string name="chart_point">Biểu đồ điểm</string>
</resources>