<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lambao.mrbeast.presentation.ui.fragment.anime_detail.pictures.AnimePicturesViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            style="@style/semibold_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/trailer"
            android:textColor="@color/text_secondary"
            android:visibility="@{viewModel.shouldShowTrailer() ? View.VISIBLE : View.GONE, default=gone}"
            tools:visibility="visible" />

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:visibility="@{viewModel.shouldShowTrailer() ? View.VISIBLE : View.GONE, default=gone}"
            tools:visibility="visible" />

        <TextView
            style="@style/semibold_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/gallery"
            android:textColor="@color/text_secondary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacters"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="100dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvEmpty"
            style="@style/bold_18"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/empty_pictures"
            android:textColor="@color/text_secondary"
            android:visibility="gone" />
    </LinearLayout>
</layout>