<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lambao.mrbeast.presentation.ui.fragment.anime_detail.AnimeDetailViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/ivThumbnailBgr"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:blurImageUrl="@{viewModel.anime.displayThumbnail()}"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:foreground="@drawable/bg_thumbnail_gradient"
                    android:scaleType="fitCenter"
                    app:imageUrl="@{viewModel.anime.displayThumbnail()}"
                    app:layout_constraintBottom_toBottomOf="@id/ivThumbnailBgr"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/semibold_18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@{viewModel.anime.displayTitle()}"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintEnd_toStartOf="@id/scoreView"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
                    app:layout_constraintWidth_max="wrap"
                    tools:text="One piece" />

                <include
                    android:id="@+id/scoreView"
                    layout="@layout/layout_small_score_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:visibility="@{viewModel.anime.shouldDisplayScore() ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
                    app:score="@{viewModel.anime.displayScore()}"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPlay"
                    style="@style/base_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_corner_4"
                    android:text="@string/play"
                    android:visibility="@{viewModel.shouldShowButtonPlay ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvGenresTitle"
                    style="@style/semibold_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/genres"
                    android:textColor="@color/text_secondary"
                    android:visibility="@{viewModel.anime.shouldDisplayGenres() ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintTop_toBottomOf="@id/btnPlay"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvGenres"
                    style="@style/medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.anime.displayGenres()}"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintTop_toBottomOf="@id/tvGenresTitle"
                    tools:text="Adventure, Drama, Fantasy" />

                <TextView
                    android:id="@+id/tvSynopsisTitle"
                    style="@style/semibold_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/synopsis"
                    android:textColor="@color/text_secondary"
                    android:visibility="@{viewModel.anime.shouldDisplaySynopsis() ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintTop_toBottomOf="@id/tvGenres"
                    tools:visibility="visible" />

                <com.lambao.base.presentation.ui.view.view_more_textview.ViewMoreTextView
                    android:id="@+id/tvSynopsisDesc"
                    style="@style/medium_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.anime.displaySynopsis()}"
                    android:textColor="@color/text_secondary"
                    android:visibility="@{viewModel.anime.shouldDisplaySynopsis() ? View.VISIBLE : View.GONE, default=gone}"
                    app:duration="500"
                    app:ellipsizeText="@string/see_more"
                    app:ellipsizeTextColor="@color/background_primary"
                    app:isUnderlined="true"
                    app:layout_constraintTop_toBottomOf="@id/tvSynopsisTitle"
                    app:visibleLines="2"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
                    tools:visibility="visible" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/black"
                    android:visibility="@{viewModel.shouldShowFullInfo ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintTop_toBottomOf="@id/tvSynopsisDesc"
                    app:tabIndicatorColor="@color/background_primary"
                    app:tabMode="scrollable"
                    app:tabRippleColor="@color/background_primary"
                    app:tabSelectedTextColor="@color/background_primary"
                    app:tabTextAppearance="@style/semibold_14"
                    app:tabTextColor="@color/background_disabled"
                    tools:visibility="visible" />

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.shouldShowFullInfo ? View.VISIBLE : View.GONE, default=gone}"
                    app:layout_constraintTop_toBottomOf="@id/tabLayout"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_circle_placeholder"
            android:padding="6dp"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_circle_placeholder"
            android:padding="6dp"
            android:src="@drawable/ic_share_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btnBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_circle_placeholder"
            android:padding="6dp"
            android:src="@drawable/ic_bookmark_24"
            app:layout_constraintBottom_toBottomOf="@id/btnShare"
            app:layout_constraintEnd_toStartOf="@id/btnShare"
            app:layout_constraintTop_toTopOf="@id/btnShare"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>